# pigeon

./: .env.example  .gitignore  Cargo.toml  README.md
pigeon/: Cargo.toml  README.md
pigeon/src/: main.rs
pigeon_nest/: Cargo.toml  README.md
pigeon_nest/src/: client.rs  config.rs  lib.rs  main.rs  node.rs  nostr_event.rs  pool.rs  relay.rs  utils.rs
pigeon_nest/tests/: integration_test.rs
src/: client.rs  config.rs  main.rs  node.rs  nostr_event.rs  pool.rs
