[package]
name = "pigeon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3"
clap = { version = "4.3", features = ["derive"] }
url = "2.3"
nostr = "0.39.0"
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.97"
reqwest = "0.12.15"
