[package]
name = "pigeon_nest"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
rand = "0.9"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
validator = { version = "0.19", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.21.1"
hex = "0.4.3"
secp256k1 = { version = "0.30.0", features = ["hashes"] }
dashmap = "6.1.0"
url = "2.5.4"
dotenv = "0.15.0"

[dev-dependencies]
nostr = "0.40.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
